Updated index file to contain the basic structure for the day planner. Moving on to edit the JS file and add in Jquery components for further functionality.

--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
         <header class="jumbotron">
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
-        <p id="currentDay" class="lead"></p>
+        <p id="currentDay" class="lead">THIS IS WHERE THE CURRENT DAY & TIME WILL GO</p>
         </header>
         <div class="container">
         <!-- Timeblocks go here -->
+        <ul id="time-blocks">
+            <li class="list-group-item">9</li>
+            <li class="list-group-item">10</li>
+            <li class="list-group-item">11</li>
+            <li class="list-group-item">12</li>
+            <li class="list-group-item">1</li>
+            <li class="list-group-item">2</li>
+            <li class="list-group-item">3</li>
+            <li class="list-group-item">4</li>
+            <li class="list-group-item">5</li>
+        </ul>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
