--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         rel="stylesheet"
         />
         <link rel="stylesheet" href="./CSS/style.css" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <title>Work Day Scheduler</title>
     </head>
 
