--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         rel="stylesheet"
         />
         <link rel="stylesheet" href="./CSS/style.css" />
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./Images/favicon.ico" type="image/x-icon">
         <title>Work Day Scheduler</title>
     </head>
 
@@ -27,21 +27,24 @@
         <header class="jumbotron">
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
-        <p id="currentDay" class="lead">THIS IS WHERE THE CURRENT DAY & TIME WILL GO</p>
+        <p id="currentDay" class="lead"></p>
         </header>
         <div class="container">
         <!-- Timeblocks go here -->
-        <ul id="time-blocks">
-            <li class="list-group-item">9</li>
-            <li class="list-group-item">10</li>
-            <li class="list-group-item">11</li>
-            <li class="list-group-item">12</li>
-            <li class="list-group-item">1</li>
-            <li class="list-group-item">2</li>
-            <li class="list-group-item">3</li>
-            <li class="list-group-item">4</li>
-            <li class="list-group-item">5</li>
-        </ul>
+        <form class="row g-3">
+            <!-- Time example 9 am -->
+            <div class="col-auto">
+                <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+            </div>
+            <!-- Text area to record the event -->
+            <div class="col-auto">
+                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+            <!-- Save button -->
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+            </div>
+        </form>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
