Changed the form layout to a table layout. Using two columns one for the time and one for the submission form. The submission form has a textarea to add your entry and a save button.

--- a/index.html
+++ b/index.html
@@ -26,26 +26,31 @@
     <body>
         <header class="jumbotron">
         <h1 class="display-3">Work Day Scheduler</h1>
-        <p class="lead">A simple calendar app for scheduling your work day</p>
-        <p id="currentDay" class="lead"></p>
+        <time>
+            <p class="lead">A simple calendar app for scheduling your work day</p>
+            <p id="currentDay" class="lead"></p>
+        </time>
         </header>
-        <div class="container">
+        <!-- Main container for the day timer -->
+        <main class="container">
         <!-- Timeblocks go here -->
-        <form class="row g-3">
-            <!-- Time example 9 am -->
-            <div class="col-auto">
-                <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+            <div class = "table-responsive">
+                <table class="table">
+                    
+                    <tbody>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">9AM</td>
+                            <td class="col-11">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="9AM" id="9AM"></textarea>
+                                    <button class="btn">save here</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <!-- Text area to record the event -->
-            <div class="col-auto">
-                <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-            </div>
-            <!-- Save button -->
-            <div class="col-auto">
-                <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
-            </div>
-        </form>
-        </div>
+        </main>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
