styled the table to expand across the entire page. Added a save icon to the button. Next is adding in the dynamic behavior for the application.

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
         <main class="container">
         <!-- Timeblocks go here -->
             <div class = "table-responsive">
-                <table class="table">
+                <table class="table table-bordered">
                     
                     <tbody>
                         <tr class="inner-box">
                             <td class="col-1 align-middle text-center">9AM</td>
-                            <td class="col-11">
+                            <td class="col-11 p-0">
                                 <form class = "form-entry" action="submit.php" method="post">
-                                    <textarea class = "form-control" type="text" name="9AM" id="9AM"></textarea>
-                                    <button class="btn">save here</button>
+                                    <textarea class = "form-control" type="text" name="9AM" id="9AM" placeholder = "Time Entry"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save"> Save</i></button>
                                 </form>
                             </td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
