Solved the storing text into local storage. Needs to be scaled across all available time blocks. Moving on to color coding then scaling the solution to the other time blocks.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                             <td class="col-1 align-middle text-center">9AM</td>
                             <td class="col-11 p-0">
                                 <form class = "form-entry" action="submit.php" method="post">
-                                    <textarea class = "form-control" type="text" name="9AM" id="9AM" placeholder = "Time Entry"></textarea>
-                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save"> Save</i></button>
+                                    <textarea class = "form-control" type="text" name="9AM" id="9AM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-9AM"> Save</i></button>
                                 </form>
                             </td>
                     </tbody>
