Added in the remaining hour timeblocks in HTML. Added array in js file to loop through for the element ids. Next is configuring the js code to all timeblock elements.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <!-- Main container for the day timer -->
         <main class="container">
-        <!-- Timeblocks go here -->
+        <!-- Time blocks go here -->
             <div class = "table-responsive">
                 <table class="table table-bordered">
                     
@@ -46,6 +46,79 @@
                                     <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-9AM"> Save</i></button>
                                 </form>
                             </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">10AM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="10AM" id="10AM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-10AM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">11AM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="11AM" id="11AM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-11AM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">12PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="12PM" id="12PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-12PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">1PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="1PM" id="1PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-1PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">2PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="2PM" id="2PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-2PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">3PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="3PM" id="3PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-3PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">4PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="4PM" id="4PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-4PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        <tr class="inner-box">
+                            <td class="col-1 align-middle text-center">5PM</td>
+                            <td class="col-11 p-0">
+                                <form class = "form-entry" action="submit.php" method="post">
+                                    <textarea class = "form-control" type="text" name="5PM" id="5PM" placeholder = "Time Block"></textarea>
+                                    <button type = "button"class="btn btn-outline-primary btn-lg"><i class="far fa-save" id="button-5PM"> Save</i></button>
+                                </form>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
