Changed the style sheet classes to contain black text color in text areas. Added a clear schedule button in html file. Script file now has clear schedule function which clears the local storage and the text areas when clicked.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 
     <body>
         <header class="jumbotron">
-        <h1 class="display-3">Work Day Scheduler</h1>
-        <time>
-            <p class="lead">A simple calendar app for scheduling your work day</p>
-            <p id="currentDay" class="lead"></p>
-        </time>
+            <h1 class="display-3">Work Day Scheduler</h1>
+            <time>
+                <p class="lead">A simple calendar app for scheduling your work day</p>
+                <p id="currentDay" class="lead"></p>
+            </time>
+            <!-- button to clear all storage/your day -->
+            <div class="d-grid gap-2">
+                <button class="btn btn-outline-primary" id="button-clear">Clear Your Schedule!</button>
+            </div>
         </header>
         <!-- Main container for the day timer -->
         <main class="container">
